--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
    "main": "index.js",
    "scripts": {
       "start": "node build/index.js",
-      "dev": "ts-node-dev src/index.ts",
+      "build": "tsc --project tsconfig.json && tsc-alias -p tsconfig.json",
+      "dev": "ts-node-dev -r tsconfig-paths/register src/index.ts",
       "tsc": "tsc"
    },
    "keywords": [],
@@ -37,6 +38,8 @@
       "@types/nodemailer": "6.4.17",
       "eslint": "9.16.0",
       "ts-node-dev": "2.0.0",
+      "tsc-alias": "^1.8.10",
+      "tsconfig-paths": "^4.2.0",
       "typescript": "^5.7.2",
       "typescript-eslint": "8.18.0"
    }
