--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
    "license": "ISC",
    "description": "",
    "dependencies": {
+      "@prisma/adapter-pg": "7.0.0",
+      "@prisma/client": "7.0.0",
       "bcryptjs": "2.4.3",
       "cloudinary": "2.5.1",
       "cors": "2.8.5",
@@ -23,6 +25,7 @@
       "multer": "1.4.5-lts.1",
       "mysql2": "3.11.5",
       "nodemailer": "6.9.16",
+      "pg": "8.16.3",
       "sequelize": "6.37.5",
       "zod": "3.23.8"
    },
@@ -36,7 +39,9 @@
       "@types/multer": "1.4.12",
       "@types/node": "22.10.0",
       "@types/nodemailer": "6.4.17",
+      "@types/pg": "^8.15.6",
       "eslint": "9.16.0",
+      "prisma": "^7.0.0",
       "ts-node-dev": "2.0.0",
       "tsc-alias": "^1.8.10",
       "tsconfig-paths": "^4.2.0",
