--- a/package.json
+++ b/package.json
@@ -39,13 +39,13 @@
       "@types/multer": "1.4.12",
       "@types/node": "22.10.0",
       "@types/nodemailer": "6.4.17",
-      "@types/pg": "^8.15.6",
+      "@types/pg": "8.15.6",
       "eslint": "9.16.0",
-      "prisma": "^7.0.0",
+      "prisma": "7.0.0",
       "ts-node-dev": "2.0.0",
-      "tsc-alias": "^1.8.10",
-      "tsconfig-paths": "^4.2.0",
-      "typescript": "^5.7.2",
+      "tsc-alias": "1.8.10",
+      "tsconfig-paths": "4.2.0",
+      "typescript": "5.7.2",
       "typescript-eslint": "8.18.0"
    }
 }
