--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
       "mysql2": "3.11.5",
       "nodemailer": "6.9.16",
       "pg": "8.16.3",
+      "pino": "10.1.0",
       "sequelize": "6.37.5",
       "zod": "3.23.8"
    },
