--- a/package.json
+++ b/package.json
@@ -2,11 +2,15 @@
    "name": "sistema-backend",
    "version": "1.0.0",
    "main": "index.js",
+   "prisma": {
+    "seed": "ts-node --transpile-only prisma/seed.ts"
+  },
    "scripts": {
       "start": "node build/index.js",
       "build": "tsc --project tsconfig.json && tsc-alias -p tsconfig.json",
       "dev": "ts-node-dev -r tsconfig-paths/register src/index.ts",
-      "tsc": "tsc"
+      "tsc": "tsc",
+      "seed": "ts-node -r tsconfig-paths/register --transpile-only prisma/seed.ts"
    },
    "keywords": [],
    "author": "Victor Raúl",
